--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>672115040 Rapeepat Sripanya</h1>
-    <img src="../images/me.png">
+    <img src="../images/me.png" alt="images">
 </body>
 </html>
